# goit_python

./: .gitignore  README.md
Python_Core/Modul_10/console_bot/app/: bot.py  entities.py
Python_Core/Modul_11/console_bot/app/: bot.py  constants.py  entities.py
Python_Core/Modul_12/console_bot/app/: bot.py  entities.py  functions.py
Python_Core/Modul_6/app/: sort_folder.py
Python_Core/Modul_7/filter_folder/: constants.py
Python_Core/Modul_7/filter_folder/filter_folder/: sort_folder.py
Python_Core/Modul_8/get_birthdays/app/: get_birthdays.py
Python_Core/Modul_9/console_bot/app/: bot.py
Python_Web/CLBOT_PY4POWER/CLBOT_PY4POWER/: notes.py
Python_Web/modul_1/CLBOT_PY4POWER/CLBOT_PY4POWER/: book.py  console_output.py  functions.py  test.py
Python_Web/modul_1/CLBOT_PY4POWER/CLBOT_PY4POWER/saved_data/: contact_book.pickle
Python_Web/modul_2/: dockerfile  pyproject.toml
Python_Web/modul_2/CLBOT_PY4POWER/: README.md  dockerfile  pyproject.toml
Python_Web/modul_2/CLBOT_PY4POWER/CLBOT_PY4POWER/: book.py  console_output.py  constants.py  functions.py  input_checker.py
Python_Web/modul_2/CLBOT_PY4POWER/app/: main.py  notes.py
