[tool.poetry]
name = "modul-2"
version = "0.1.0"
description = ""
authors = ["ortursucceeh <109922331+ortursucceeh@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "modul_2"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
tabulate = "0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
